--- a/css/main.css
+++ b/css/main.css
@@ -84,3 +84,14 @@ ul.posts li {
   width: 150px;
   border-radius: 50%;
 }
+
+.parent {
+    width: 100%;
+    height: 100%;
+    display: table;
+    text-align: center;
+}
+.parent > .child {
+    display: table-cell;
+    vertical-align: middle;
+}
