Changes in Main Page content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:rafael.goncalves.lima@gmail.com">email</a></li>
+        		<li><a href="mailto:rafael.goncalves.lima@gmail.com">Contact</a></li>
         		<!-- <li><a href="https://github.com/rafael-glima">github.com/rafael-glima</a></li> -->
 			</ul>
 		</footer>
